--- a/gui.ipynb
+++ b/gui.ipynb
@@ -15,6 +15,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "temp = pathlib.WindowsPath\n",
+    "pathlib.WindowsPath = pathlib.PosixPath\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
